[package]
name = "mempool-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.32.5"
bitcoincore-zmq = "1.5.2"
bitcoind = "0.36.1"
log = "0.4.26"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.96"
sled = "0.34.7"
serde = "1.0.218"
serde_json = "1.0.139"
tokio = "1.43.0"
