[package]
name = "mempool-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.32.6"
bitcoincore-zmq = { version = "1.5.2", features = ["async"] }
bitcoind = "0.36.1"
bitcoind-async-client = {git = "https://github.com/0xBEEFCAF3/bitcoind-async-client", branch = "mempool-methods"}
log = "0.4.26"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.96"
sled = "0.34.7"
serde = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
futures-util = "0.3.31"
env_logger = "0.11.6"
bincode = "1.3.3"
bitcoin_hashes = "0.16.0"
async-channel = "2.3.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.27.0"
hex = "0.4.3"
reqwest = "0.12.23"

[dependencies.rusqlite]
version = "0.34.0"
features = ["bundled"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8"
rand = "0.8.5"
